sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__naked_singles__tests__snapshots__base_3_sample_5_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/naked_singles.rs
description: Strategy NakedSingles executed on grid base_3_sample_5_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │ 12  │ 1   ║ 123 │     │     ║ 1 3 │     │     ║
    - ║  9  │     │     ║     │  8  │  4  ║     │  6  │  5  ║
    - ║     │ 7   │ 7   ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 1   │     ║ 1 3 │ 1 3 │     ║     │   3 │     ║
    - ║  6  │     │  4  ║     │     │  5  ║  2  │     │  7  ║
    - ║     │  8  │     ║   9 │   9 │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │ 1   ║ 12  │     │  2  ║ 1   │     │     ║
    - ║  5  │  3  │     ║   6 │  7  │     ║ 4   │  8  │ 45  ║
    - ║     │     │     ║   9 │     │     ║   9 │     │   9 ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║  23 │   3 │     ║     │  2  │  2  ║
    - ║  7  │  6  │     ║     │     │  1  ║  5  │ 4   │ 4   ║
    - ║     │     │  89 ║  8  │     │     ║     │     │  89 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║  2  │     │  2  ║     │  2  │     ║
    - ║ 4   │  5  │  3  ║   6 │   6 │     ║ 4   │ 4   │  1  ║
    - ║     │     │     ║ 78  │     │ 78  ║  89 │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 12  │ 1   ║     │     │     ║     │  2  │     ║
    - ║     │     │     ║  4  │  5  │  9  ║  6  │     │  3  ║
    - ║     │  8  │  8  ║     │     │     ║     │ 7   │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║     │     │     ║   3 │     │     ║
    - ║  1  │ 4   │  5  ║     │  2  │  6  ║ 4   │  9  │ 4   ║
    - ║     │ 7   │     ║ 78  │     │     ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║ 1   │     │     ║   3 │   3 │     ║
    - ║     │     │  2  ║  5  │  4  │     ║     │  5  │  56 ║
    - ║     │ 7 9 │     ║ 789 │     │ 78  ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │  2  ║
    - ║  8  │ 4   │   6 ║  5  │  5  │  3  ║  7  │  1  │ 456 ║
    - ║     │   9 │   9 ║   9 │   9 │     ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r0c8: set value 5, because of: r0c8: candidate 5"
    - "r1c7: set value 3, because of: r1c7: candidate 3"
    - "r2c2: set value 1, because of: r2c2: candidate 1"
    - "r2c5: set value 2, because of: r2c5: candidate 2"
    - "r3c4: set value 3, because of: r3c4: candidate 3"
    - "r4c4: set value 6, because of: r4c4: candidate 6"
    - "r5c0: set value 2, because of: r5c0: candidate 2"
    - "r5c4: set value 5, because of: r5c4: candidate 5"
    - "r7c0: set value 3, because of: r7c0: candidate 3"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │  2  │     ║ 1 3 │     │     ║ 1   │     │     ║
    - ║  9  │     │     ║     │  8  │  4  ║     │  6  │  5  ║
    - ║     │ 7   │ 7   ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║ 1   │ 1   │     ║     │     │     ║
    - ║  6  │     │  4  ║     │     │  5  ║  2  │  3  │  7  ║
    - ║     │  8  │     ║   9 │   9 │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  5  │  3  │  1  ║   6 │  7  │  2  ║ 4   │  8  │ 4   ║
    - ║     │     │     ║   9 │     │     ║   9 │     │   9 ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║  2  │     │     ║     │  2  │  2  ║
    - ║  7  │  6  │     ║     │  3  │  1  ║  5  │ 4   │ 4   ║
    - ║     │     │  89 ║  8  │     │     ║     │     │  89 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║  2  │     │     ║     │  2  │     ║
    - ║ 4   │  5  │  3  ║     │  6  │     ║ 4   │ 4   │  1  ║
    - ║     │     │     ║ 78  │     │ 78  ║  89 │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 1   │     ║     │     │     ║     │     │     ║
    - ║  2  │     │     ║  4  │  5  │  9  ║  6  │     │  3  ║
    - ║     │  8  │  8  ║     │     │     ║     │ 7   │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║     │     │     ║   3 │     │     ║
    - ║  1  │ 4   │  5  ║     │  2  │  6  ║ 4   │  9  │ 4   ║
    - ║     │ 7   │     ║ 78  │     │     ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║ 1   │     │     ║     │     │     ║
    - ║  3  │     │  2  ║  5  │  4  │     ║     │  5  │   6 ║
    - ║     │ 7 9 │     ║ 789 │     │ 78  ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │  2  ║
    - ║  8  │ 4   │   6 ║  5  │     │  3  ║  7  │  1  │ 4 6 ║
    - ║     │   9 │   9 ║   9 │   9 │     ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 8
        candidates:
          - 5
    actions:
      - position:
          row: 0
          column: 8
        setValue: 5
  - reasons:
      - position:
          row: 1
          column: 7
        candidates:
          - 3
    actions:
      - position:
          row: 1
          column: 7
        setValue: 3
  - reasons:
      - position:
          row: 2
          column: 2
        candidates:
          - 1
    actions:
      - position:
          row: 2
          column: 2
        setValue: 1
  - reasons:
      - position:
          row: 2
          column: 5
        candidates:
          - 2
    actions:
      - position:
          row: 2
          column: 5
        setValue: 2
  - reasons:
      - position:
          row: 3
          column: 4
        candidates:
          - 3
    actions:
      - position:
          row: 3
          column: 4
        setValue: 3
  - reasons:
      - position:
          row: 4
          column: 4
        candidates:
          - 6
    actions:
      - position:
          row: 4
          column: 4
        setValue: 6
  - reasons:
      - position:
          row: 5
          column: 0
        candidates:
          - 2
    actions:
      - position:
          row: 5
          column: 0
        setValue: 2
  - reasons:
      - position:
          row: 5
          column: 4
        candidates:
          - 5
    actions:
      - position:
          row: 5
          column: 4
        setValue: 5
  - reasons:
      - position:
          row: 7
          column: 0
        candidates:
          - 3
    actions:
      - position:
          row: 7
          column: 0
        setValue: 3
